; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/extr_ov7251.c_ov7251_set_power_off.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/extr_ov7251.c_ov7251_set_power_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ov7251 = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ov7251*)* @ov7251_set_power_off to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ov7251_set_power_off(%struct.ov7251* %0) #0 {
  %2 = alloca %struct.ov7251*, align 8
  store %struct.ov7251* %0, %struct.ov7251** %2, align 8
  %3 = load %struct.ov7251*, %struct.ov7251** %2, align 8
  %4 = getelementptr inbounds %struct.ov7251, %struct.ov7251* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @clk_disable_unprepare(i32 %5)
  %7 = load %struct.ov7251*, %struct.ov7251** %2, align 8
  %8 = getelementptr inbounds %struct.ov7251, %struct.ov7251* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @gpiod_set_value_cansleep(i32 %9, i32 0)
  %11 = load %struct.ov7251*, %struct.ov7251** %2, align 8
  %12 = call i32 @ov7251_regulators_disable(%struct.ov7251* %11)
  ret void
}

declare dso_local i32 @clk_disable_unprepare(i32) #1

declare dso_local i32 @gpiod_set_value_cansleep(i32, i32) #1

declare dso_local i32 @ov7251_regulators_disable(%struct.ov7251*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
